data/derived/sp14/progs/unify/prog4820.ml.out
Characters 32-52:
  let stringOfList f l = List.map (sepConcat "" (f l)) (l);;
                                  ^^^^^^^^^^^^^^^^^^^^
Error: This expression has type string but an expression was expected of type
         'a -> 'b
